# Formal_language_practice

./: CMakeLists.txt  README.md  algorithm.md
includes/checkers/: CMakeLists.txt  checkers.cpp  checkers.h
includes/constants/: constants.h
includes/reg_exp/: CMakeLists.txt  reg_exp.cpp  reg_exp.h
project_tests/: CMakeLists.txt  checkers_tests.cpp  reg_exp_tests.cpp
src/: main.cpp
